# Lumisift

./: .env.example  .gitignore  BENCHMARK.md  README.md  __init__.py  ablation_study.py  app.py  axis_calibration.json  baseline_comparison.py  cross_encoder_benchmark.py  download_model.py  downstream_eval.py  drug_discovery_usecase.py  export_reproducibility_kit.py  hybrid_benchmark.py  information_loss_taxonomy.py  information_utility_model.py  learned_scoring.py  main.py  numerical_retention_benchmark.py  pubmed_benchmark.py  pubmedqa_benchmark.py  pubmedqa_official_benchmark.py  pyproject.toml  requirements-dev.txt  requirements.txt  scifact_benchmark.py
benchmark_data/: ablation_study.json  baseline_comparison.json  cross_encoder_comparison.json  downstream_quality.json  drug_discovery_usecase.json  hybrid_benchmark.json  information_loss_taxonomy.json  learned_scoring.json  numerical_retention.json  pubmedqa_benchmark.json  pubmedqa_official.json  reproducibility_kit.json  training_data.jsonl  utility_model_results.json
core/: __init__.py  atom.py  atom_store.py  axes_evaluator.py  cloud_llm.py  dataset.py  embeddings.py  finetuning.py  graph.py  knowledge_cache.py  llm_interface.py  local_llm.py  models.py  nf4_loader.py  pipeline.py  projection_engine.py  self_optimization.py  surface.py  vector_store.py
data/projects/default/: atoms.jsonl  embeddings.npy  project.json
models/: axis_predictor.pt  utility_model.pt
skills/ai-agent-builder/: SKILL.md
skills/ai-agent-builder/references/: architecture.md  patterns.md  resource-saving.md
skills/airllm-skill/: SKILL.md
skills/airllm-skill/examples/: streaming_pipeline.py
skills/airllm-skill/resources/: CHEATSHEET.md
static/: index.html  whitepaper.html
templates/: dashboard.html  dashboard_7axes.html
tests/: test_metrics.py  test_pipeline.py
visualization/: simple_visualizer.py  visualizer.py
